--- a/.bochsrc
+++ b/.bochsrc
@@ -2,6 +2,9 @@
 # Bochs User Manual: http://bochs.sourceforge.net/doc/docbook/user/bochsrc.html
 megs: 16
 
+romimage: file=bin/BIOS-bochs-latest
+vgaromimage: file=bin/VGABIOS-elpin-2.40
+# vgaromimage: file=bin/VGABIOS-lgpl-latest
 floppya: 1_44=./zeos.bin, status=inserted
 boot: floppy
 
@@ -15,5 +18,5 @@ debugger_log: -
 port_e9_hack: enabled=1
 
 # Uncomment next line to enable GUI debugger
-#display_library: x, options="gui_debug"
+display_library: x, options="gui_debug"
 
