first exercise completed

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .direnv
-.direnv
-.direnv
-.direnv
-.direnv
-.direnv
-.direnv
-.direnv
-.direnv
-.direnv
+*.o
+*.s
+bochsout.txt
+parport.out 
+system.out 
+system 
+bootsect 
+zeos.bin 
+user 
+user.out 
+*~ 
+build 
